--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "radix-vue": "^1.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.4.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
