--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.354.0",
     "nuxt": "^3.10.3",
     "radix-vue": "^1.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.2",
     "vue": "^3.4.21",
+    "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
