--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "idb": "^8.0.0",
     "lucide-vue-next": "^0.354.0",
     "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
