--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "eslint-plugin-vue": "^9.22.0",
     "prettier": "3.2.5",
     "shadcn-nuxt": "^0.10.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
